added river coordinates to DB; draw rivers on map

--- a/server/index.html
+++ b/server/index.html
@@ -48,7 +48,7 @@
         <div class="modal-body" id="modalBody">
             <form id="queryForm">
                 <div class="form-group">
-                    <textarea class="form-control" id="message-text" name ="question"></textarea>
+                    <textarea class="form-control" id="query-text" name ="question"></textarea>
                 </div>
             </form>
         </div>
