search bar, capitals marker

--- a/server/index.html
+++ b/server/index.html
@@ -27,9 +27,27 @@
         </div>
         <div class="navbar-collapse collapse" id="navbar">
             <ul class="nav navbar-nav navbar-left" id="buttons">
-                <li class="active"><a onclick="resetMap();">Reset Map</a> </li>
-                <li><a data-toggle="modal" href="#myModaltest">Query</a> </li>                
-            </ul>            
+                <!-- <li> <a class="glyphicon glyphicon-erase" onclick="resetMap();"></a> </li> -->
+
+                <li class="active"><a onclick="resetMap();">Reset Map</a> </li> 
+                
+                <!-- <li><a data-toggle="modal" href="#myModaltest">Query</a> </li> -->
+
+
+                <li>                
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="input-group">
+                      <input onkeypress="if(event.keyCode == 13) query();" type="text" class="form-control" id="query-text" placeholder="Search for...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-default" type="button" onclick="query();">Go!</button>
+                      </span>
+                    </div><!-- /input-group -->
+                  </div><!-- /.col-lg-6 -->
+                </div><!-- /.row -->
+                </li>
+
+            </ul>                
         </div>
     </div>
 </div>
