--- a/server/index.html
+++ b/server/index.html
@@ -42,7 +42,25 @@
                     </div><!-- /input-group -->
                 </li>
 
-            </ul>                
+            </ul>    
+
+            <ul class="nav navbar-nav navbar-right" id="buttons">
+                <li id="search-bar">
+                    <div class="dropdown">
+                          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Type of Queries
+                          <span class="caret"></span></button>
+                          <ul class="dropdown-menu">
+                            <li><a href="#">what rivers are in (the) "location"</a></li>
+                            <li><a href="#">what cities are in "location"</a></li>
+                            <li><a href="#">what countries are in "location"</a></li>
+                            <li><a href="#">where is the largest city</a></li>
+                            <li><a href="#">where is the largest country</a></li>
+                            <li><a href="#">what country's capital is "city"</a></li>
+                          </ul>
+                    </div>
+                </li>
+            </ul>
+
         </div>
     </div>
 </div>
