--- a/server/index.html
+++ b/server/index.html
@@ -42,9 +42,14 @@
                     </div><!-- /input-group -->
                 </li>
 
+                <li id="error-field">
+                    <span id="error" style="color: red"></span>
+                </li>
+
             </ul>    
 
             <ul class="nav navbar-nav navbar-right" id="buttons">
+
                 <li id="search-bar">
                     <div class="dropdown">
                           <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Type of Queries
