question mark missing on index.html

--- a/server/index.html
+++ b/server/index.html
@@ -61,7 +61,7 @@
                           <span class="caret"></span></button>
                           <ul class="dropdown-menu">
                             <li><a onclick="$('#query-text').val(this.textContent.substring(2));" href="#">- What rivers are in (the) "location"?</a></li>
-                            <li><a onclick="$('#query-text').val(this.textContent.substring(2));" href="#">- What cities are in "location"</a></li>
+                            <li><a onclick="$('#query-text').val(this.textContent.substring(2));" href="#">- What cities are in "location"?</a></li>
                             <li><a onclick="$('#query-text').val(this.textContent.substring(2));" href="#">- What countries are in "location"?</a></li>
                             <li><a onclick="$('#query-text').val(this.textContent.substring(2));" href="#">- Where is the largest city?</a></li>
                             <li><a onclick="$('#query-text').val(this.textContent.substring(2));" href="#">- Where is the largest country?</a></li>
