--- a/server/index.html
+++ b/server/index.html
@@ -91,7 +91,8 @@
     </div>
 </div>
 
-<footer>            
+<div class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container" id="footer">
         Copyright &copy; 
         <a href="mailto:gfl.campos@gmail.com">
         <p class="copyright text-muted">Gonçalo Gonçalves</p>
@@ -101,7 +102,8 @@
         <p class="copyright text-muted">Ricardo Gonçalves</p>
         </a>
         2016
-</footer>
+    </div>
+</div>
 
 
 <script src="javascripts/index.js"></script>
